check_err.txt
cargo :     Checking falcon_executor v1.2.0 (F:\db\crates\falcon_executor)
所在位置 行:1 字符: 1
+ cargo check -p falcon_executor 2>&1 | Out-File -FilePath F:\db\check_ ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking fa...alcon_executor):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0308]: mismatched types
   --> crates\falcon_executor\src\eval\..\eval.rs:457:75
    |
457 |             else_result.map_or(Ok(Datum::Null), |e| eval_expr_with_params(e, row, params))
    |                                                     --------------------- ^ expected `&BoundExpr`, found `Box<Bou
ndExpr>`
    |                                                     |
    |                                                     arguments to this function are incorrect
    |
    = note: expected reference `&falcon_sql_frontend::BoundExpr`
                  found struct `Box<falcon_sql_frontend::BoundExpr>`
note: function defined here
   --> crates\falcon_executor\src\eval\..\eval.rs:325:8
    |
325 | pub fn eval_expr_with_params(
    |        ^^^^^^^^^^^^^^^^^^^^^
326 |     expr: &BoundExpr,
    |     ----------------
help: consider borrowing here
    |
457 |             else_result.map_or(Ok(Datum::Null), |e| eval_expr_with_params(&e, row, params))
    |                                                                           +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `falcon_executor` (lib) due to 1 previous error
